compiler/src/test/resources/amyc/typer/passing/Misc.amy
module Misc
  error("a" ++ "b")
end Misc
