compiler/src/test/resources/amyc/typer/failing/ConcatError.amy
module ConcatError
  1 ++ ""
end ConcatError
